# ingest_sessions

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  DESIGN.md  METHODOLOGY.md  README.md  ingest_sessions.py  pyproject.toml  server.py
.pebbles/: config.json  events.jsonl
docs/plans/: 2026-03-07-lcm-summary-dag.md  2026-03-08-blob-store.md  2026-06-22-retrieval-brain-is-565.md
scripts/: backfill_corpus.py  supersession_adapter.py
src/ingest_sessions/: blobs.py  cli.py  core.py  dag.py  embeddings.py  install.py  ranking.py  rerank.py  retrieval.py  server.py  summarize.py  supersession.py
src/ingest_sessions/hooks/: _retrieve_common.py  first_prompt_retrieve.py  pre_compact.py  session_retrieve.py  session_start.py  session_start.sh
tests/: conftest.py  test_blob_ingestion.py  test_blobs.py  test_capture_invariant.py  test_cli.py  test_core.py  test_dag.py  test_dag_e2e.py  test_e2e_hooks.py  test_embeddings.py  test_first_prompt_retrieve.py  test_fts_rebuild.py  test_install.py  test_lexical.py  test_ranking.py  test_regression_2026_03.py  test_rerank.py  test_retrieval.py  test_retrieve_common.py  test_server.py  test_session_retrieve.py  test_summaries_tier.py  test_summarize.py  test_supersession.py  test_supersession_adapter.py
