[project]
name = "ingest-sessions"
version = "0.2.0"
description = "MCP server for querying Claude Code session transcripts via DuckDB"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "mcp>=1.0",
    "watchdog>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
ingest-sessions = "ingest_sessions.cli:main"
ingest-sessions-server = "ingest_sessions.server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest_sessions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
