[project]
name = "ingest-sessions"
version = "0.2.0"
description = "MCP server for querying Claude Code session transcripts via DuckDB"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "fastembed>=0.8.0",
    "mcp>=1.0",
    "starlette>=0.27",
    "uvicorn>=0.20",
    "watchdog>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
ingest-sessions = "ingest_sessions.cli:main"
ingest-sessions-server = "ingest_sessions.server:cli"
ingest-sessions-install = "ingest_sessions.install:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest_sessions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# scripts/ holds standalone operator tools (consumer-side adapters) that are
# not part of the importable package; expose them to the test runner so their
# PURE parse functions can be unit-tested directly.
pythonpath = ["scripts"]

[tool.mypy]
# Resolve standalone scripts (e.g. scripts/supersession_adapter.py) when a test
# imports them, so mypy type-checks the import rather than reporting it missing.
mypy_path = "scripts"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
